@@ -1,3 +1,6 @@
+2000-12-01  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* exult.cc: Ctrl-P: repaint screen, P: use lockpick
+
 2000-12-02  Ryan Nunn  <triforce@merlin.net.au>
 	* added audio/soundtest.cc
 	* exult.cc, cheat.cc, audio/soundtest.cc: Added Sound Tester (Ctrl-1)
